# aud10-suite

./: CMakeLists.txt
inc/: config.hpp  constants.hpp  simd_audio.hpp
inc/fx/: compressor.hpp  deesser.hpp  delay.hpp  effect.hpp  effects.hpp  graphic_eq.hpp  hilo_pass.hpp  parametric_eq.hpp  pitch_correct.hpp  pitch_shift.hpp  reverb.hpp  saturator.hpp
scripts/: install-prereqs.sh
src/: config.cpp  constants.cpp  main.cpp
src/fx/: compressor.cpp  deesser.cpp  delay.cpp  graphic_eq.cpp  hilo_pass.cpp  parametric_eq.cpp  pitch_correct.cpp  pitch_shift.cpp  reverb.cpp  saturator.cpp
